2008-02-20  Mark Mitchell  <mark@codesourcery.com>

	ld/testsuite/
	* ld-elf/seg.d: Expect .reginfo section on MIPS.

2008-02-20  Pedro Alves  <pedro_alves@portugalmail.pt>

	* ld-auto-import/auto-import.exp: Use $ld to link the dll for
	cygwin, not $CC.

2008-02-18  Hans-Peter Nilsson  <hp@axis.com>

	* lib/ld-lib.exp (run_dump_test): Don't apply prune_warnings
	for tool invocations where warnings or errors can be matched.

2008-02-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-shared/sh1.c (shlib_overriddencall2): Moved to ...
	* ld-shared/sh2.c (shlib_overriddencall2): Here.  New.

2008-02-07  Alan Modra  <amodra@bigpond.net.au>

	* ld-spu/ovl.d: Update.
	* ld-spu/ovl2.d: Update.

2008-02-04  Bob Wilson  <bob.wilson@acm.org>

	* ld-undefined/undefined.exp: XFAIL for xtensa*-*-linux*.
	
2008-01-31  Marc Gauthier  <marc@tensilica.com>

	* ld-elf/merge.d: Recognize Xtensa processor variants.
	* ld-xtensa/coalesce.exp: Likewise.
	* ld-xtensa/lcall.exp: Likewise.

2008-01-28  Petr Muller  <pmuller@redhat.com>

	* ld-elfvers/vers.exp (test_ar): Sort the expected output so that
	it has matches the ordering of the obtained output.

2008-01-28  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/eh1.d: Replace DW_CFA_def_cfa_reg with
	DW_CFA_def_cfa_register. Updated for i386/x86-64 register
	names.
	* ld-elf/eh2.d: Likewise.
	* ld-elf/eh3.d: Likewise.
	* ld-elf/eh4.d: Likewise.
	* ld-elf/eh5.d: Likewise.

2008-01-28  Alan Modra  <amodra@bigpond.net.au>

	* ld-spu/ovl.d: Update.
	* ld-spu/ovl2.d: Update.

2008-01-26  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/loadaddr.t: New, extracted from..
	* ld-elf/loadaddr1.t: ..here.  Use insert.
	* ld-elf/loadaddr2.t: Likewise.
	* ld-elf/loadaddr1.d: Update.
	* ld-elf/loadaddr2.d: Update.

2008-01-25  Alan Modra  <amodra@bigpond.net.au>

	* ld-spu/ovl.lnk: Delete overlay.
	* ld-spu/ovl1.lnk: New file.
	* ld-spu/ovl2.lnk: New file.
	* ld-spu/ovl.d: Update.
	* ld-spu/ovl2.d: Update.

2008-01-23  Andreas Schwab  <schwab@suse.de>
