@@ -1,3 +1,8 @@
+2008-02-27  Catherine Moore  <clm@codesourcery.com>
+
+	* ld-cris/libdso-10.d: Update expected output for the Dynamic
+	Section to allow an arbitrary number of spaces.
+
 2008-02-20  Mark Mitchell  <mark@codesourcery.com>
 
 	ld/testsuite/
